# panars

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.csv  my-requirements-dev.txt  pyproject.toml  requirements-dev.txt  test.py
examples/: exam.py
panars/: __init__.py  dataframe.py  io.py  series.py
tests/: test_dataframe.py  test_io.py  test_series.py
