[project]
name = "panars"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "milisp", email = "milisp@proton.me"},
]
dependencies = [
    "polars-lts-cpu>=1.10.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
